--- a/examples/4-composition/index.html
+++ b/examples/4-composition/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Copyright 2021 Hugo Daniel Henriques Oliveira Gomes. All rights reserved.
+Licensed under the EUPL -->
 <html lang="en">
 
 <head>
@@ -6,7 +8,7 @@
     <link
         href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
         rel="icon" />
-    <title>Shader Canvas Triangle Example</title>
+    <title>Shader Canvas New DSL Example</title>
 </head>
 
 <body>
